[project]
name = "ai-abstract-screening-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "blinker==1.8.2",
    "cachelib==0.13.0",
    "certifi==2024.8.30",
    "click==8.1.7",
    "distro==1.9.0",
    "exceptiongroup==1.2.2",
    "flask==3.0.3",
    "flask-session==0.8.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "jiter==0.7.0",
    "markupsafe==3.0.2",
    "msgspec==0.18.6",
    "numpy==2.0.2",
    "openai==1.53.0",
    "packaging==24.1",
    "pandas==2.2.3",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "six==1.16.0",
    "sniffio==1.3.1",
    "tenacity>=9.1.2",
    "tqdm==4.66.6",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "werkzeug==3.1.1",
    "zipp==3.20.2",
]
